6819
Oh, and that's communicated via the other helpful error it shows if you comment out bar in C:
{noformat}
./a.scala:22: error: class C needs to be abstract, since method bar in class A of type (foo: C.this.Foo)Unit is not defined
(Note that A.this.Foo does not match B.this.Foo)
class C extends B {
      ^
{noformat}
